--- a/hippodrome-master/pom.xml
+++ b/hippodrome-master/pom.xml
@@ -15,9 +15,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.24.3</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.18</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
